[gd_scene load_steps=2 format=3 uid="uid://b4r6j7mavy5y0"]

[ext_resource type="Script" uid="uid://cb0dbeu3nsrev" path="res://ui/save_load_menu.gd" id="1_yrd2v"]

[node name="SaveLoadMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_yrd2v")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="FileList" type="ItemList" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "UI_LABEL_FILENAME"

[node name="InputName" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnSave" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "UI_BTN_SAVE"

[node name="BtnLoad" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "UI_BTN_LOAD"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnDelete" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "UI_BTN_DELETE"

[node name="Spacer" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnClose" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "UI_BTN_CLOSE"

[node name="ConfirmOverwrite" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
initial_position = 2
